@@ -1,4 +1,8 @@
-﻿zg 18.07.2014 01:06:52 +0200 - build 4006
+﻿drkns 18.07.2014 01:49:25 +0200 - build 4007
+
+1. Не работало получение закладок в редакторе. И уже давно.
+
+zg 18.07.2014 01:06:52 +0200 - build 4006
 
 1. при удалении редактора внутри события EE_READ, редактор удаляется только после окончания обработки этого события.
 
